# Y3D-Toy-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/shaders/: shader.frag  shader.vert
src/: Camera.cpp  Camera.h  Shader.cpp  main.cpp  paths.h  renderer.cpp  renderer.h  shader.h
src/core/: camera.cpp  camera.h  lightSource.cpp  lightSource.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/geometry/: mesh.h  primitive.h
src/primitives/: lightSource.cpp  lightSource.h  mesh.cpp  mesh.h  model.cpp  model.h
